syntax = "proto3";
import "dto/settings.proto";

option csharp_namespace = "Proto.Requests.Settings";

message GetSettingsRequestProto {}

message IsExportPathValidRequestProto {}

message IsExportPathValidResponseProto {
  bool is_valid = 1;
}

message SettingsExistsRequestProto {
}

message SettingsExistsResponseProto {
  bool exists = 1;
}

service SettingsRequestService {
  rpc GetSettings(GetSettingsRequestProto) returns (SettingsProto);
  rpc IsExportPathValid(IsExportPathValidRequestProto) returns (IsExportPathValidResponseProto);
  rpc SettingsExists(SettingsExistsRequestProto) returns (SettingsExistsResponseProto);
}
